Upgrade to Java 17 and Neo4j 5.x.